[#160935067] improve edge cases,update docs

--- a/app/templates/version2.html
+++ b/app/templates/version2.html
@@ -8,7 +8,7 @@
     <script>
     	window.onload = function() {
     	  const ui = SwaggerUIBundle({
-    	    url: "{{ url_for('static', filename='swagger_v2.json') }}",
+    	    url: "{{ url_for('static', filename='swagger_v2.yaml') }}",
     	    dom_id: '#swagger-ui',
     	    presets: [
     	      SwaggerUIBundle.presets.apis,
